--- a/problems/03.md
+++ b/problems/03.md
@@ -3,14 +3,14 @@
 用生成器去实现类似 async/await 的功能。async 是一个函数，用 yield 来表达 'await’。
 
 ```js
-function asyncReturn(value) {
+function promiseReturn(value) {
 	return Promise.resolve(value);
 }
 
 async(function* () {
-	let a = yield asyncReturn(1);
-	let b = yield asyncReturn(2);
-	let c = yield asyncReturn(3);
+	let a = yield promiseReturn(1);
+	let b = yield promiseReturn(2);
+	let c = yield promiseReturn(3);
 
 	return a + b + c;
 }).then(result {
