--- a/problems/03.md
+++ b/problems/03.md
@@ -13,7 +13,7 @@ async(function* () {
 	let c = yield promiseReturn(3);
 
 	return a + b + c;
-}).then(result {
+}).then(result => {
   console.log(result);
 });
 
