--- a/problems/04.md
+++ b/problems/04.md
@@ -96,6 +96,10 @@ a + b => 300
  */
 ```
 
+请利用 ES6 Proxy 来实现 `autorun` 和 `observable`。
+
+observable 只需要支持对象，不需要支持嵌套。
+
 # 参考资料
 
 + [MobX](https://mobxjs.github.io/mobx/getting-started.html)
