--- a/problems/04.md
+++ b/problems/04.md
@@ -98,7 +98,7 @@ a + b => 300
 
 请利用 ES6 Proxy 来实现 `autorun` 和 `observable`。
 
-observable 只需要支持对象，不需要支持嵌套。
+observable 只需要支持对象，不需要支持嵌套对象。
 
 # 参考资料
 
