--- a/problems/04.md
+++ b/problems/04.md
@@ -18,7 +18,9 @@ autorun(() => {
 	console.log("counter:", counter.value);
 });
 
+
 setInterval(() => {
+	// 改动 counter.value 会触发 autorun 的回调
 	counter.value += 1;
 }, 1000);
 
